# ARM-SOFT-Scanning

./: .gitignore  README.md  verbose.txt
3d_reconstruction/: 03_result_analysis.ipynb  04_demo_segmentation.ipynb  05_demo_preprocessing.ipynb  06_demo_reconstruction.ipynb  README.md  pyproject.toml  reconstruction_nb.ipynb  segmentation_nb.ipynb
3d_reconstruction/blender/: brain_mesh.ply
3d_reconstruction/figures/calibration_pictures/brio300/output/: calibration_data.pkl  camera_matrix.txt  distortion_coefficients.txt
3d_reconstruction/reconstruction_mesh/: 30d_convex_hull_mesh_voxel0.005.ply
3d_reconstruction/src/: __init__.py  algebra.py  constants.py  convex_hull.py  io_utils.py  mesh.py  physics_utils.py  scans.py
3d_reconstruction/src/camera_calibration/: available_cameras.py  camera_calibration.py  capture_calibration_images.py
3d_reconstruction/src/camera_data/: __init__.py  camera_data.py  extrinsics.py  intrinsic.py
3d_reconstruction/src/graphics/: __init__.py  color_converter.py  graphic_classes.py  graphic_utils.py
3d_reconstruction/src/image_segmentation/: __init__.py  segment_stump.py
3d_reconstruction/src/image_segmentation/utils/: io_utils.py
3d_reconstruction/src/preprocessing/jitter_correction/: jitter.py  object_pca.py
3d_reconstruction/src/registrator/: __init__.py  itk_utils.py  registrator.py  registrator_utils.py
3d_reconstruction/src/utils/: camera_data.py
blender_simulator/: 3d_scanning_sim.blend  READme.md  camera_intrinsics.json
figures/: reconstruction scene.blend
structure/: structure.blend
(+24 files in other folders)
